Fixed bug where jquery does not work by updating static in setting.py

--- a/account/templates/account/account.html
+++ b/account/templates/account/account.html
@@ -3,71 +3,14 @@
 
 {% block content %}
 
-<style type="text/css">
+<style>
     .grad {
-        background-image: linear-gradient(#FDB99B,#CF8BF3,#A770EF); /*#2657eb*/
+        background-image: linear-gradient(#659999,#f4791f);
         background-repeat: no-repeat;
         min-height: 1000px;
     }
-	.image-container{
-		max-width: 250px;
-		height: auto;
-	}
-	.field-heading{
-		color: var(--secondary-text-color);
-	}
-	.icon-container:hover {
-		opacity: 0.3;
-		cursor: pointer;
-	}
-	.Merchs-icon{
-		color: #4287f5;
-		font-size: 40px;
-	}
-	.person-add-icon{
-		color: #4287f5;
-		font-size: 40px;
-	}
-	.Merch-text{
-		font-weight: 500;
-		color: black;
-	}
-	.Merchs-btn{
-		background-color: #cccccc;
-		border-color: #cccccc;
-		color: #000;
-		font-weight: 500;
-	}
-	.Merchs-btn:hover {
-		background-color: #bfbfbf;
-		border-color: #bfbfbf;
-	}
-	.dropdown-toggle::after { 
-		content: none; 
-	}
 	.card{
 		border-radius: 12px;
-	}
-	.material-icons{
-		font-size: 30px;
-	}
-	.material-icons:hover{
-		cursor: pointer;
-	}
-	.confirm-Merch-request{
-		color: green;
-	}
-	.confirm-Merch-request:hover {
-		opacity: 0.3;
-	}
-	.decline-Merch-request:hover {
-		opacity: 0.3;
-	}
-	.decline-Merch-request{
-		color: red;
-	}
-	.message-btn-text{
-		font-weight: 500;
 	}
 </style>
 <body class="grad">
