--- a/merch/templates/merch/snippets/decline_Merch_request.html
+++ b/merch/templates/merch/snippets/decline_Merch_request.html
@@ -1,3 +1,5 @@
+{% load static %}
+<script src="{% static 'Scripts/jquery-3.6.3.min.js' %}"></script>
 <script type="text/javascript">
 
 	function declineMerchRequest(request_id, uiUpdateFunction){
