--- a/merch/templates/merch/snippets/send_Merch_request.html
+++ b/merch/templates/merch/snippets/send_Merch_request.html
@@ -1,6 +1,9 @@
+<script src="{% static 'Scripts/jquery-3.6.3.min.js' %}"></script>
 <script type="text/javascript">
 
 	function sendMerchRequest(id, uiUpdateFunction){
+        		var url = "{% url 'merch:accept-merch-request' 53252623623632623 %}".replace("53252623623632623", request_id, store_id)
+
 		payload = {
 			"csrfmiddlewaretoken": "{{ csrf_token }}",
 			"receiver_user_id": id,
