--- a/merch/templates/merch/snippets/accept_Merch_request.html
+++ b/merch/templates/merch/snippets/accept_Merch_request.html
@@ -1,5 +1,6 @@
+{% load static %}
+<script src="{% static 'Scripts/jquery-3.6.3.min.js' %}"></script>
 <script type="text/javascript">
-
 	function acceptMerchRequest(request_id, uiUpdateFunction){
 		var url = "{% url 'merch:accept-merch-request' 53252623623632623 %}".replace("53252623623632623", request_id)
 		$.ajax({
