--- a/merch/templates/merch/dashboard_nav.html
+++ b/merch/templates/merch/dashboard_nav.html
@@ -9,6 +9,7 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
     <link rel="shortcut icon" type="image/png" href="{% static 'images/favicon.svg' %}"/>
+      <link rel="icon" href="{% static 'images/favicon.svg' %}">
     <title>Home</title>
 
 
