Warehouse dates feature

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -26,6 +26,7 @@
                 ">TateoMerch</a>
           <div class=" navbar-collapse" id="navbarNavAltMarkup" >
             <div class="navbar-nav">
+            <a class="nav-link" href="/ops/warehouse-dates">Warehouse</a>
                 {% if user.is_merch %}
               <a class="nav-link" href="/merch/dashboard">Merch</a>
                 {% endif %}
