--- a/operations/templates/warehouse_dates.html
+++ b/operations/templates/warehouse_dates.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Concord Warehouse Dates</title>
+    <title>Inventory</title>
   </head>
 
 <body>
@@ -31,6 +31,7 @@
         <tr>
             <th scope="col">#</th>
             <th scope="col">Item Name</th>
+            <th scope="col">Quantity</th>
             <th scope="col">Date</th>
         </tr>
         </thead>
@@ -40,7 +41,8 @@
 
                 <tr>
                     <th scope="row">{{ forloop.counter }}</th>
-                    <td>{{ item.item_brand}}{{ item.item_type}}{{ item.item_size}} {{ item.item_name}}</td>
+                    <td>{{ item.item.item_brand}}{{ item.item.item_type}}{{ item.item.item_size}} {{ item.item.item_name}}</td>
+                    <td> {{ item.total_quantity }}</td>
                     <td>{{ item.item_date}}</td>
                 </tr>
 
