--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,3 +2,9 @@
         background-image: linear-gradient(#659999,#f4791f);
         background-repeat: no-repeat;
   }
+
+  .tateomerch_logo_grad {
+    background: linear-gradient(to right, #659999,#f4791f);
+    -webkit-text-fill-color: transparent;
+    -webkit-background-clip: text;
+}
