--- a/account/templates/service.html
+++ b/account/templates/service.html
@@ -66,7 +66,7 @@
 <div class="container">
 
             <div class="card text-white bg-dark mb-4">
-            <h1 class="text-center tateomerch_logo_grad">Interested?</h1>
+                <h1 class="text-center tateomerch_logo_grad">Interested?</h1>
             </div>
 <div class="card text-white bg-dark mb-3">
 
@@ -75,19 +75,19 @@
       {% csrf_token %}
       <div class="mb-3">
         <label for="name" class="form-label">Name</label>
-        <input type="text" class="form-control" id="name" name="name" required>
+        <input type="text" class="form-control opacity-75" id="name" name="name" required>
       </div>
       <div class="mb-3">
         <label for="phone" class="form-label">Phone</label>
-        <input type="tel" class="form-control" id="phone" name="phone" required>
+        <input type="tel" class="form-control opacity-75" id="phone" name="phone" required>
       </div>
       <div class="mb-3">
         <label for="email" class="form-label">Email</label>
-        <input type="email" class="form-control" id="email" name="email" required>
+        <input type="email" class="form-control opacity-75" id="email" name="email" required>
       </div>
       <div class="mb-3">
         <label for="interests" class="form-label">Interests</label>
-        <textarea class="form-control" id="interests" name="interests" rows="3" required></textarea>
+        <textarea class="form-control opacity-75" id="interests" name="interests" rows="3" required></textarea>
       </div>
       <button type="submit" class="btn btn-light tateomerch_logo_grad">Submit</button>
     </form>
@@ -97,12 +97,11 @@
 
     </section>
 
-{#    <footer class="bg-dark text-white text-center py-3">#}
-{#        <div class="container">#}
-{#            &copy; 2023 Merchandising Services. All rights reserved.#}
-{#        </div>#}
-{#    </footer>#}
-
+    <footer class="bg-dark text-white text-center py-3" id="footer">
+        <div class="container">
+            &copy; 2023 Merchandising Services. All rights reserved.
+        </div>
+    </footer>
 
 </body>
 
