--- a/operations/templates/warehouse_manager_detail.html
+++ b/operations/templates/warehouse_manager_detail.html
@@ -29,9 +29,9 @@
 {#                                  <a type="button" href="/ops/warehouse/{{ warehouse.id }}/orderform" class="btn btn-outline-success">Order</a>#}
                                   <a type="button" href="https://forms.office.com/pages/responsepage.aspx?id=JWwiTDq_UEGXCpp7Ec1w4PWkcr5jqrZFhAjKF0kY7DhUODBaUkZDUUFTN1VYRkQzSUE1QVZKQklTUyQlQCN0PWcu&origin=QRCode" target="_blank" class="btn btn-outline-success">Order</a>
                                   <a type="button" href="/ops/warehouse/{{ warehouse.id }}/inventory" class="btn btn-outline-secondary">Inventory</a>
+                                  <a type="button" href="/ops/warehouse/{{ warehouse.id }}/print" class="btn btn-outline-secondary">Print</a>
+                                  <a type="button" href="/ops/warehouse/{{ warehouse.id }}/inventory/physical" class="btn btn-outline-secondary">Physical Inventory</a>
                             </div>
-
-
 
                 {% endif %}
         </div>
