--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -19,7 +19,8 @@
           <a class="navbar-brand tateomerch_logo_grad" href="/home" >TateoMerch</a>
           <div class=" navbar-collapse" id="navbarNavAltMarkup" >
             <div class="navbar-nav">
-            <a class="nav-link" href="/service">Services</a>
+{#            <a class="nav-link" href="/service">Services</a>#}
+                <a class="nav-link" href="/ops/dashboard">Warehouse</a>
                 {% if user.is_merch %}
               <a class="nav-link" href="/merch/dashboard">Merch</a>
                 {% endif %}
