Warehouse Manager features and html/css changes

--- a/operations/templates/pallet-pages.html
+++ b/operations/templates/pallet-pages.html
@@ -22,6 +22,9 @@
         <div class="table-responsive text-nowrap">
                 {% if route %}
 
+       <a type="button" onclick="history.back()" class="btn btn-secondary mb-3">Back</a>
+
+
                               <div class="card-body">
                                 <h2 class="card-title">Warehouse {{ warehouse.number }}</h2>
                                 <p class="card-text">{{ warehouse.address }}</p>
