--- a/operations/templates/warehouse_dashboard.html
+++ b/operations/templates/warehouse_dashboard.html
@@ -26,7 +26,7 @@
                    <h4 class="bi-building p-3"> Warehouse list</h4>
                     {% for warehouse in warehouses %}
 
-                        <div class="card m-2" style="max-width: 50VW;">
+                        <div class="card m-2 card-back text-center" style="max-width: 50VW;">
                               <div class="card-body">
                                 <h5 class="card-title">Warehouse {{ warehouse.number }} </h5>
                                  <p class="card-text">{{ warehouse.address }}</p>
