--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -16,7 +16,7 @@
   </head>
     <nav class="navbar navbar-expand navbar-light bg-light">
         <div class="container-fluid">
-          <a class="navbar-brand tateomerch_logo_grad" href="/home" >TateoMerch</a>
+          <a class="navbar-brand tateomerch_logo_grad" href="/home" >ShipTeo</a>
           <div class=" navbar-collapse" id="navbarNavAltMarkup" >
             <div class="navbar-nav">
 {#            <a class="nav-link" href="/service">Services</a>#}
