--- a/operations/templates/order_summary.html
+++ b/operations/templates/order_summary.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
   <head>
@@ -7,20 +8,20 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+<link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
     <title>Order</title>
   </head>
 
 <body>
 
 
-{% extends 'navbar.html' %}
+{% include 'navbar.html' %}
 
 
 {% block content %}
 
 <main>
-    <div class= "container">
+    <div class= "container my-4 ">
         <div class="table-responsive text-nowrap">
     <h3>
         <br>
