--- a/operations/templates/warehouse_detail.html
+++ b/operations/templates/warehouse_detail.html
@@ -1,6 +1,7 @@
+{% load static %}
 <!doctype html>
 <html lang="en">
-  <head>
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,35 +9,70 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css">
+          <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
     <title>Dashboard</title>
-  </head>
+</head>
 
 <body>
 
-
-{% extends 'navbar.html' %}
+{% include 'navbar.html' %}
 {% block content %}
 
-<main>
-    <div class= "container">
-        <div class="table-responsive text-nowrap">
-                {% if warehouse %}
+<main class="container my-4 ">
+    <div class="row">
+        <div class="col-md-12">
 
-                              <div class="card-body">
-                                <h2 class="card-title">Warehouse {{ warehouse.number }}</h2>
-                                <p class="card-text">{{ warehouse.address }}</p>
+        <a type="button" onclick="history.back()" class="btn btn-secondary mb-3">Back</a>
 
-{#                                  <a type="button" href="/ops/warehouse/{{ warehouse.id }}/orderform" class="btn btn-outline-success">Order</a>#}
-                                  <a type="button" href="https://forms.office.com/pages/responsepage.aspx?id=JWwiTDq_UEGXCpp7Ec1w4PWkcr5jqrZFhAjKF0kY7DhUODBaUkZDUUFTN1VYRkQzSUE1QVZKQklTUyQlQCN0PWcu&origin=QRCode" target="_blank" class="btn btn-outline-success">Order</a>
-                                  <a type="button" href="/ops/warehouse/{{ warehouse.id }}/inventory" class="btn btn-outline-secondary">Inventory</a>
-                            </div>
+            {% if warehouse %}
+                <div class="card card-back text-center">
+                    <div class="card-body">
+                        <h2 class="card-title ">Warehouse {{ warehouse.number }}</h2>
+                        <p class="card-text">{{ warehouse.address }}</p>
 
+                    </div>
+                </div>
 
+                <div class="card">
+                    <div class="card-body card-back2 text-center">
+                                <p>
+                                    <a href="orders" target="_blank" class="btn btn-success uniform-btn">
+                                        Orders
+                                    </a>
+{#                                    <span class="description">Link to order form</span>#}
+                                </p>
 
-                {% endif %}
+                                <p>
+                                    <a href="/ops/warehouse/{{ warehouse.id }}/inventory" class="btn btn-secondary uniform-btn">
+                                        Inventory
+                                    </a>
+{#                                    <span class="description">Warehouse inventory</span>#}
+                                </p>
+
+                                <p>
+{#                                    <a href="/ops/warehouse/order-status-view/" class="btn btn-secondary uniform-btn">#}
+{#                                        Orders#}
+{#                                    </a>#}
+{#                                    <span class="description">List of active orders</span>#}
+{#                                </p>#}
+
+                                <p>
+                                    <a href="/ops/warehouse/{{ warehouse.id }}/print/" class="btn btn-warning uniform-btn">
+                                        Pages
+                                    </a>
+{#                                    <span class="description">Print pallet indicator pages</span>#}
+                                </p>
+                    </div>
+                </div>
+            {% else %}
+                <p>No warehouse information available.</p>
+            {% endif %}
         </div>
     </div>
 </main>
 
 {% endblock content %}
+</body>
+</html>
+
 
