--- a/templates/home.html
+++ b/templates/home.html
@@ -31,7 +31,7 @@
         <div>
             <br>
             <div class="d-flex justify-content-center">
-                <h1 style="font-size: 75px; color: white; font-weight: lighter">TateoMerch</h1>
+                <h1 style="font-size: 75px; color: white; font-weight: lighter">ShipTeo</h1>
             </div>
             <div class="d-flex justify-content-center">
                 <p style="font-weight: lighter; color: white;">The right product in the right place at the right time</p>
