--- a/operations/templates/mongoOrdersInOrder.html
+++ b/operations/templates/mongoOrdersInOrder.html
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-    {% include "Navbar.html" %}
+{% extends 'navbar.html' %}
     <div class="container">
         <div class="row">
             {% for order in orders %}
