--- a/operations/templates/mongoOrdersInOrder.html
+++ b/operations/templates/mongoOrdersInOrder.html
@@ -32,8 +32,9 @@
     </style>
 </head>
 
-<body>
 {% extends 'navbar.html' %}
+{% block content %}
+<body>
     <div class="container">
         <div class="row">
             {% for order in orders %}
@@ -51,5 +52,6 @@
         </div>
     </div>
 </body>
+{% endblock %}
 
 </html>
