--- a/operations/templates/warehouse_dates.html
+++ b/operations/templates/warehouse_dates.html
@@ -28,24 +28,16 @@
                                 <h2 class="card-title">Warehouse {{ warehouse.number }}</h2>
 
 {#                                  <a type="button" href="/ops/warehouse/{{ warehouse.id }}/orderform" class="btn btn-outline-success">Order</a>#}
-                                  <a type="button" href="https://forms.office.com/pages/responsepage.aspx?id=JWwiTDq_UEGXCpp7Ec1w4PWkcr5jqrZFhAjKF0kY7DhUODBaUkZDUUFTN1VYRkQzSUE1QVZKQklTUyQlQCN0PWcu&origin=QRCode" target="_blank" class="btn btn-outline-success">Order</a>
-                                  <a type="button" href="/ops/warehouse/{{ warehouse.id }}/inventory" class="btn btn-outline-secondary">Inventory</a>
+                                  <a type="button" href="" target="" class="btn btn-success">Order</a>
+                                  <a type="button" href="/ops/warehouse/{{ warehouse.id }}/inventory/physical" class="btn btn-warning">Physical Inventory</a>
 
                             </div>
 
-                                <div class= "container">
+                                <div class= "card ">
                                     <div class="table-responsive text-nowrap">
-                                <h3>
-                                    <br>
 
-                                </h3>
 
-                                    <div style=" height:300px; overflow:auto;">
-                                        <object
-                                                type="text/html" data="https://forms.office.com/pages/responsepage.aspx?id=JWwiTDq_UEGXCpp7Ec1w4PWkcr5jqrZFhAjKF0kY7DhUODBaUkZDUUFTN1VYRkQzSUE1QVZKQklTUyQlQCN0PWcu&origin=QRCode" width="100%" height="600px" style="overflow:auto;border:5px black">
-                                        </object>
-                                    </div>
-                                    <div style="height:200px; width: 85vw; overflow:auto;">
+                                    <div style="height:auto; width: 85vw; overflow:auto;">
                                 <table class="table">
                                     <thead>
                                     <tr>
