--- a/operations/templates/warehouse_detail.html
+++ b/operations/templates/warehouse_detail.html
@@ -36,7 +36,7 @@
                 <div class="card">
                     <div class="card-body card-back2 text-center">
                                 <p>
-                                    <a href="orders" target="_blank" class="btn btn-success uniform-btn">
+                                    <a href="orders" class="btn btn-success uniform-btn">
                                         Orders
                                     </a>
 {#                                    <span class="description">Link to order form</span>#}
