settings tweaks and html changes

--- a/operations/templates/mongoOrdersInOrder.html
+++ b/operations/templates/mongoOrdersInOrder.html
@@ -39,7 +39,7 @@
     </style>
 </head>
 
-{% extends 'navbar.html' %}
+{% include 'navbar.html' %}
 {% block content %}
 <body>
     <div class="container">
