--- a/operations/templates/warehouse_detail.html
+++ b/operations/templates/warehouse_detail.html
@@ -50,11 +50,11 @@
                                 </p>
 
                                 <p>
-{#                                    <a href="/ops/warehouse/order-status-view/" class="btn btn-secondary uniform-btn">#}
-{#                                        Orders#}
-{#                                    </a>#}
-{#                                    <span class="description">List of active orders</span>#}
-{#                                </p>#}
+                                    <a href="/ops/warehouse/{{ warehouse.id }}/runrates/" class="btn btn-secondary uniform-btn">
+                                        Run Rates
+                                    </a>
+{#                                    <span class="description">List of active run rates</span>#}
+                                </p>
 
                                 <p>
                                     <a href="/ops/warehouse/{{ warehouse.id }}/print/" class="btn btn-warning uniform-btn">
