--- a/operations/templates/inventory/inventory_list.html
+++ b/operations/templates/inventory/inventory_list.html
@@ -1,4 +1,3 @@
-
 <!doctype html>
 <html lang="en">
 <head>
@@ -8,6 +7,23 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Inventory</title>
+    <style>
+        /* Custom styles for smaller devices */
+        @media (max-width: 768px) {
+            .table-smaller {
+                font-size: 0.75rem; /* Reducing font size */
+            }
+            .table-smaller td, .table-smaller th {
+                padding: .3rem; /* Reducing padding */
+            }
+            /* Additional styles for other elements can be added here */
+        }
+
+        .table-responsive-custom {
+            background-color: rgba(255, 255, 255, 0.8);
+            margin-bottom: 20px; /* Add some space between tables */
+        }
+    </style>
 </head>
 <body>
 
@@ -16,33 +32,37 @@
     {% load custom_filters %}
 
 <main class="container">
-    <div class="table-responsive text-nowrap">
-    {% if OOS_items %}
-    <h2 class="my-4">Current OOS List</h2>
-        <table class="table" style="background-color: rgba(255, 255, 255, 0.8);">
-            <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Item Number</th>
-                <th scope="col">Item Name</th>
-
-            </tr>
-            </thead>
-            <tbody>
-                {% for item in OOS_items %}
+    <!-- Out-Of-Stock Table -->
+    <div class="table-responsive text-nowrap table-responsive-custom">
+        {% if OOS_items %}
+        <h2 class="my-4">Out-Of-Stock</h2>
+            <table class="table table-smaller">
+                <thead>
                 <tr>
-                    <th scope="row">{{ forloop.counter }}</th>
-                    <td>{{ item.ItemNumber|to_int }}</td>
-                    <td>{{ item.ItemDescription }}</td>
+                    <th scope="col">#</th>
+                    <th scope="col">Item Number</th>
+                    <th scope="col">Item Name</th>
                 </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-    {% else %}
-    <p>No out-of-stock items.</p>
-    {% endif %}
+                </thead>
+                <tbody>
+                    {% for item in OOS_items %}
+                    <tr>
+                        <th scope="row">{{ forloop.counter }}</th>
+                        <td>{{ item.ItemNumber|to_int }}</td>
+                        <td>{{ item.ItemDescription }}</td>
+                    </tr>
+                    {% endfor %}
+                </tbody>
+            </table>
+        {% else %}
+        <p>No out-of-stock items.</p>
+        {% endif %}
+    </div>
+
+    <!-- Inventory List Table -->
+    <div class="table-responsive text-nowrap table-responsive-custom">
         <h2 class="my-4">Inventory List</h2>
-        <table class="table" style="background-color: rgba(255, 255, 255, 0.8);">
+        <table class="table table-smaller">
             <thead>
             <tr>
                 <th scope="col">#</th>
