New html look, order verification and detail

--- a/account/templates/account/login.html
+++ b/account/templates/account/login.html
@@ -39,7 +39,7 @@
                   <h2 style="font-weight: lighter; background: linear-gradient(to right, #659999,#f4791f);
             -webkit-text-fill-color: transparent;
             -webkit-background-clip: text;
-                ">TateoMerch</h2>
+                ">ShipTeo</h2>
 
                     <br>
 
