--- a/operations/templates/inventory/inventory_list.html
+++ b/operations/templates/inventory/inventory_list.html
@@ -8,20 +8,40 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <title>Inventory</title>
     <style>
-        /* Custom styles for smaller devices */
-        @media (max-width: 768px) {
-            .table-smaller {
-                font-size: 0.75rem; /* Reducing font size */
-            }
-            .table-smaller td, .table-smaller th {
-                padding: .3rem; /* Reducing padding */
-            }
-            /* Additional styles for other elements can be added here */
+        body {
+            background-color: #f8f9fa; /* Soft background color */
+            font-family: 'Nunito', sans-serif; /* Optional: Change to a more readable font */
+        }
+
+        main.container {
+            padding-top: 20px; /* Adding some space on the top */
+        }
+
+        h2 {
+            color: #007bff; /* Bootstrap primary color for headings */
+            font-weight: 700; /* Bold font for headings */
+            margin-bottom: 20px; /* Spacing below headings */
         }
 
         .table-responsive-custom {
-            background-color: rgba(255, 255, 255, 0.8);
-            margin-bottom: 20px; /* Add some space between tables */
+            border-radius: 10px; /* Rounded corners for tables */
+            box-shadow: 0 4px 6px rgba(0,0,0,0.1); /* Subtle shadow for depth */
+            padding: 20px; /* Padding inside the table container */
+            background-color: #ffffff; /* White background for contrast */
+            margin-bottom: 30px; /* Spacing between tables */
+        }
+
+        .table {
+            margin-bottom: 0; /* Remove default margin from Bootstrap tables */
+        }
+
+        @media (max-width: 768px) {
+            .table-smaller {
+                font-size: 0.75rem; /* Reduced font size on smaller screens */
+            }
+            .table-smaller td, .table-smaller th {
+                padding: .3rem; /* Reduced padding on smaller screens */
+            }
         }
     </style>
 </head>
@@ -35,8 +55,8 @@
     <!-- Out-Of-Stock Table -->
     <div class="table-responsive text-nowrap table-responsive-custom">
         {% if OOS_items %}
-        <h2 class="my-4">Out-Of-Stock</h2>
-            <table class="table table-smaller">
+        <h2 class="text-danger">Out-Of-Stock</h2>
+            <table class="table table-hover table-smaller">
                 <thead>
                 <tr>
                     <th scope="col">#</th>
@@ -61,8 +81,8 @@
 
     <!-- Inventory List Table -->
     <div class="table-responsive text-nowrap table-responsive-custom">
-        <h2 class="my-4">Inventory List</h2>
-        <table class="table table-smaller">
+        <h2>Inventory List</h2>
+        <table class="table table-hover table-smaller">
             <thead>
             <tr>
                 <th scope="col">#</th>
