--- a/templates/home.html
+++ b/templates/home.html
@@ -13,16 +13,7 @@
 
   </head>
 
-  <style>
-      .grad {
-                background-image: linear-gradient(#659999,#f4791f);
-                background-repeat: no-repeat;
-                height: 100vh;;
-            }
-
-  </style>
-
-<body class="grad">
+<body>
 
     {% extends 'navbar.html' %}
 
